--- a/arch/arm/boot/dts/qcom/sdm630-gpu.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm630-gpu.dtsi
@@ -174,9 +174,9 @@
 
 				qcom,speed-bin = <0>;
 
-				qcom,initial-pwrlevel = <5>;
+				qcom,initial-pwrlevel = <7>;
 
-				/* TURBO */
+				/* TURBO_L1 */
 				qcom,gpu-pwrlevel@0 {
 					reg = <0>;
 					qcom,gpu-freq = <775000000>;
@@ -264,9 +264,9 @@
 
 				qcom,speed-bin = <162>;
 
-				qcom,initial-pwrlevel = <5>;
+				qcom,initial-pwrlevel = <7>;
 
-				/* TURBO */
+				/* TURBO_L1 */
 				qcom,gpu-pwrlevel@0 {
 					reg = <0>;
 					qcom,gpu-freq = <775000000>;
@@ -355,6 +355,17 @@
 				qcom,speed-bin = <146>;
 
 				qcom,initial-pwrlevel = <4>;
+
+
+                                /* TURBO_L1 */
+                                qcom,gpu-pwrlevel@0 {
+                                        reg = <0>;
+                                        qcom,gpu-freq = <775000000>;
+                                        qcom,bus-freq = <11>;
+                                        qcom,bus-min = <10>;
+                                        qcom,bus-max = <11>;
+                                };                            
+
 
 				/* TURBO */
 				qcom,gpu-pwrlevel@0 {
