--- a/arch/arm64/configs/dxt_defconfig
+++ b/arch/arm64/configs/dxt_defconfig
@@ -1,6 +1,5 @@
 # CONFIG_LOCALVERSION_AUTO is not set
-CONFIG_LOCALVERSION=" Dxt "
-LOCALVERSION="1.0"
+CONFIG_LOCALVERSION=" Dxt-v1.0 "
 
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
