--- a/arch/arm/boot/dts/qcom/sdm630-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm630-regulator.dtsi
@@ -564,13 +564,13 @@
 			gfx_vreg_corner: regulator {
 				regulator-name = "gfx_corner";
 				regulator-min-microvolt = <1>;
-				regulator-max-microvolt = <8>;
+				regulator-max-microvolt = <7>;
 
 				qcom,cpr-fuse-corners = <6>;
 				qcom,cpr-fuse-combos = <8>;
 				qcom,cpr-corners = <7>;
 
-				qcom,cpr-corner-fmax-map = <1 2 3 4 5 6 7>;
+				qcom,cpr-corner-fmax-map = <1 2 3 4 5 6>;
 
 				qcom,cpr-voltage-ceiling =
 					<545000  605000  685000  750000
@@ -579,7 +579,7 @@
 					<464000  464000  556000  612000
 					 672000  704000 1030000>;
 
-				qcom,mem-acc-voltage = <1 1 1 2 2 2 2 2>;
+				qcom,mem-acc-voltage = <1 1 1 2 2 2 2>;
 				qcom,system-voltage =
 					<RPM_SMD_REGULATOR_LEVEL_LOW_SVS>,
 					<RPM_SMD_REGULATOR_LEVEL_LOW_SVS>,
@@ -588,8 +588,7 @@
 					<RPM_SMD_REGULATOR_LEVEL_NOM>,
 					<RPM_SMD_REGULATOR_LEVEL_NOM_PLUS>,
 					<RPM_SMD_REGULATOR_LEVEL_TURBO>;
-                                        <RPM_SMD_REGULATOR_LEVEL_TURBO_PLUS>;
-   
+
 				qcom,corner-frequencies =
 					<160000000 240000000 370000000
 					 465000000 588000000 647000000
