--- a/arch/arm/boot/dts/qcom/sdm630.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm630.dtsi
@@ -834,6 +834,7 @@
 
 	pm660_bcl: qcom,bcl {
 		compatible = "qcom,bcl";
+		qcom,bcl-enable;
 		qcom,bcl-framework-interface;
 		qcom,bcl-hotplug-list = <&CPU2 &CPU3>;
 		qcom,bcl-soc-hotplug-list = <&CPU0 &CPU1 &CPU2 &CPU3>;
@@ -1106,7 +1107,7 @@
 
 	cpubw: qcom,cpubw {
 		compatible = "qcom,devbw";
-		governor = "bw_hwmon";
+		governor = "performance";
 		qcom,src-dst-ports = <1 512>;
 		qcom,active-only;
 		qcom,bw-tbl =
@@ -1120,9 +1121,7 @@
 			<  2929 /*  768 MHz */ >,
 			<  3879 /* 1017 MHz */ >,
 			<  4943 /* 1296 MHz */ >,
-			<  5163 /* 1353 MHz */ >,
-                        <  5931 /* 1555 MHz */ >,
-			<  6881 /* 1804 MHz */ >;
+			<  5163 /* 1353 MHz */ >;
 	};
 
 	bwmon: qcom,cpu-bwmon {
@@ -1252,7 +1251,9 @@
 			< 1881600 >,
 			< 2016000 >,
 			< 2150400 >,
-			< 2208000 >;
+			< 2208000 >,
+			< 2380800 >,
+			< 2515200 >;
 
 		qcom,cpufreq-table-4 =
                         <  300000 >,
@@ -1262,8 +1263,7 @@
 			< 1382400 >,
 			< 1536000 >,
 			< 1728000 >,
-			< 1881600 >,
-                        < 1958400 >;
+			< 1843200 >;
 	};
 
 	ipa_hw: qcom,ipa@14780000 {
@@ -1364,8 +1364,7 @@
 			<  1382400000 0x04040048 0x07390039 0x2 5 >,
 			<  1536000000 0x04040050 0x08400040 0x2 6 >,
 			<  1728000000 0x0404005a 0x09480048 0x2 7 >,
-			<  1881600000 0x04040062 0x094e004e 0x2 8 >,
-                        <  1958400000 0x04040066 0x0a510051 0x3 9 >;
+			<  1843200000 0x04040060 0x094c004c 0x3 8 >;
 
 		qcom,perfcl-speedbin0-v0 =
 			<   300000000 0x0004000f 0x01200020 0x1 1 >,
@@ -1401,7 +1400,8 @@
 			<  1881600000 0x04040062 0x094e004e 0x2 7 >,
 			<  2016000000 0x04040069 0x0a540054 0x2 8 >,
 			<  2150400000 0x04040070 0x0b590059 0x2 9 >,
-			<  2380800000 0x0404007c 0x0c630063 0x3 10 >;
+			<  2380800000 0x0404007c 0x0c630063 0x3 10 >,
+			<  2515200000 0x04040083 0x0d680068 0x3 11 >;
 
 		qcom,perfcl-speedbin3-v0 =
 			<   300000000 0x0004000f 0x01200020 0x1 1 >,
